# OMPar

./: .gitignore  BASELINE_PERFORMANCE.md  BENCHMARKING_GUIDE.md  CPP_OPTIMIZATION_GUIDE.md  FINAL_PROJECT_REPORT.md  FINAL_TEST_REPORT.md  GIT_SETUP_GUIDE.md  INSTALLATION_GUIDE.md  PERFORMANCE_OPTIMIZED.md  PROGRESS_SUMMARY.md  QUICK_PUSH_GUIDE.md  SIMPLE_TESTS_RESULTS.md  benchmark_baseline.json  benchmark_dfg_cpp_vs_python.py  benchmark_optimized.json  benchmark_performance.py  benchmark_results_20260104_224215.json  benchmark_results_20260104_230018.json  benchmark_results_20260104_233301.json  benchmark_results_20260105_001042.json  benchmark_results_20260105_001338.json  benchmark_results_20260105_001705.json  benchmark_results_20260105_001737.json  benchmark_results_20260105_001844.json  benchmark_results_20260105_002043.json  benchmark_simple.py  benchmark_trt_vs_pt.py  benchmark_with_cpp_dfg.json  compAI.py  requirements.txt  simple_tests.py  test_cpp.py  test_cpp_module.py  verify_opt_pipeline.py
OMPify/: model.py
cpp_extensions/dfg_extractor/: CMakeLists.txt  bindings.cpp  build.sh  dfg_extractor.cpp  dfg_extractor.hpp
cpp_extensions/monocoder_onnx/: benchmark_optimum.py
cpp_extensions/monocoder_tensorrt/: CMakeLists.txt  bindings.cpp  build.sh  convert_to_trt.py  monocoder_trt.cpp  monocoder_trt.hpp  monocoder_trt.py
